--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Titillium+Web:ital,wght@1,300&display=swap" rel="stylesheet">
     <title>Formulário</title>
 </head>
 <body>
@@ -12,21 +16,21 @@
             <h2>Criar uma conta</h2>
         </div>
         <form id="form" class="form">
-            <div class="form-control">
+            <div class="form-control error">
                 <label for="username">Nome de usuário</label>
                 <input type="text" id="username" placeholder="Digite o seu nome de usuário">
                 <i class="fas fa-exclamation-circle"></i>
                 <i class="fas fa-check-circle"></i>
                 <small>Mensagem de erro</small>
             </div>
-            <div class="form-control">
+            <div class="form-control error">
                 <label for="email">Email</label>
                 <input type="text" id="email" placeholder="Digite seu email">
                 <i class="fas fa-exclamation-circle"></i>
                 <i class="fas fa-check-circle"></i>
                 <small>Mensagem de erro</small>
             </div>
-            <div class="form-control">
+            <div class="form-control success">
                 <label for="password">Senha</label>
                 <input type="text" id="password" placeholder="Digite sua senha">
                 <i class="fas fa-exclamation-circle"></i>
