--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
             <h2>Criar uma conta</h2>
         </div>
         <form id="form" class="form">
-            <div class="form-control error">
+            <div class="form-control">
                 <label for="username">Nome de usuário</label>
                 <input type="text" id="username" placeholder="Digite o seu nome de usuário">
                 <i class="fas fa-exclamation-circle"></i>
                 <i class="fas fa-check-circle"></i>
                 <small>Mensagem de erro</small>
             </div>
-            <div class="form-control error">
+            <div class="form-control">
                 <label for="email">Email</label>
                 <input type="text" id="email" placeholder="Digite seu email">
                 <i class="fas fa-exclamation-circle"></i>
                 <i class="fas fa-check-circle"></i>
                 <small>Mensagem de erro</small>
             </div>
-            <div class="form-control success">
+            <div class="form-control">
                 <label for="password">Senha</label>
                 <input type="text" id="password" placeholder="Digite sua senha">
                 <i class="fas fa-exclamation-circle"></i>
@@ -48,5 +48,6 @@
         </form>
     </div>
     <script src="https://kit.fontawesome.com/adeb6f713f.js" crossorigin="anonymous"></script>
+    <script src="./javascript.js"></script>
 </body>
 </html>
