--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h2>Criar uma conta</h2>
+            <h2 class="txt">Criar uma conta!</h2>
         </div>
         <form id="form" class="form">
             <div class="form-control">
@@ -32,14 +32,14 @@
             </div>
             <div class="form-control">
                 <label for="password">Senha</label>
-                <input type="text" id="password" placeholder="Digite sua senha">
+                <input type="password" id="password" placeholder="Digite sua senha">
                 <i class="fas fa-exclamation-circle"></i>
                 <i class="fas fa-check-circle"></i>
                 <small>Mensagem de erro</small>
             </div>
             <div class="form-control">
                 <label for="password-confirmation">Confirmação de senha</label>
-                <input type="text" id="password-confirmation" placeholder="Digite seu senha novamente">
+                <input type="password" id="password-confirmation" placeholder="Digite seu senha novamente">
                 <i class="fas fa-exclamation-circle"></i>
                 <i class="fas fa-check-circle"></i>
                 <small>Mensagem de erro</small>
